tests/ui/form_data_validate_trait.stderr
error[E0428]: the name `ValidateMyFormDataFormData` is defined multiple times
 --> $DIR/form_data_validate_trait.rs:6:1
  |
3 | #[derive(FormData)]
  |          -------- previous definition of the trait `ValidateMyFormDataFormData` here
...
6 | trait ValidateMyFormDataFormData {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ValidateMyFormDataFormData` redefined here
  |
  = note: `ValidateMyFormDataFormData` must be defined only once in the type namespace of this module

error[E0407]: method `validate` is not a member of trait `ValidateMyFormDataFormData`
 --> $DIR/form_data_validate_trait.rs:3:10
  |
3 | #[derive(FormData)]
  |          ^^^^^^^^ not a member of trait `ValidateMyFormDataFormData`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `validate` found for trait object `dyn ValidateMyFormDataFormData` in the current scope
 --> $DIR/form_data_validate_trait.rs:3:10
  |
3 | #[derive(FormData)]
  |          ^^^^^^^^ function or associated item not found in `dyn ValidateMyFormDataFormData`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `validate`, perhaps you need to implement one of them:
          candidate #1: `ValidateMyFormDataFormData`
          candidate #2: `Validator`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
