tests/ui/form_data_validate_trait.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData;

trait ValidateMyFormDataFormData {
}

fn main() {
}
